@@ -322,3 +322,4 @@
  10-Sep-2021  V1.691 Update dependencies for rcsb.utils.dictionary and rcsb.utils.io
  23-Sep-2021  V1.692 Simplify updates to RepoHoldingsDataPrep() for the update collection
  27-Sep-2021  V1.693 Add RepoHoldingsRemoteDataPrep and support for RepositoryProvider discoveryMode="remote"
+ 29-Sep-2021  V1.694 Make discovery mode an internal configuration property of RepositoryProvider()
